# PLAYAUTO

./: .gitignore  COMPONENT_LIBRARY.md  GITHUB_ACTION_SETUP.md  IMPROVEMENT_TODO.md  NEXT_STEPS.md  PR_GUIDE.md  README.md  frontend_analysis.md  frontend_sample.tsx  frontend_sample_refactored.tsx  inventory_management_refactored.tsx  playauto_analysis.md  run_all.zsh  run_backend.zsh  run_frontend.zsh  setup-github-secrets.sh  test_calculator.py
.playwright-mcp/: 수불부-2025-09-10.csv  입출고-일괄처리-템플릿-2025-09-14.csv  입출고-일괄처리-템플릿-2025-09-29.csv  입출고요약-2025-09-29.csv  재고-템플릿-2025-09-01.csv  재고-템플릿-2025-09-03.csv  재고-템플릿-2025-09-04.csv  재고실사-수정-2025-09-12.csv  재고실사-테스트-2025-09-12.csv  재고실사-테스트2-2025-09-12.csv  재고실사-템플릿-2025-09-10.csv  재고실사-템플릿-2025-09-11.csv  재고실사-템플릿-2025-09-15.csv  제품목록-2025-09-04.csv  제품추가-템플릿-2025-09-16.csv
backend/: .dockerignore  .env.example  .gitignore  README.md  analyze_db_schema.py  check_and_remove_legacy_fk.py  check_categories.py  check_product_columns.py  daily_ledger_automation.py  insert_supplement_data.py  nixpacks.toml  process_purchase_orders.py  pytest.ini  railway.json  regenerate_ledgers.py  regenerate_med001_ledgers.py  requirements.txt  resolve_discrepancies.py  run_migration_011.py  run_migration_safe.py  run_tests.sh  run_warehouse_migration.py  seed_data.py  setup_cron.sh  test_bom_data.py  test_comprehensive_validation.py  test_new_adjustment.py  verify_schema_integrity.py
backend/config/: .env.production.example  pyproject.toml  railway.toml  requirements.txt
frontend/: .env.production  VERCEL_DEPLOYMENT.md  index.html  (+6 more)
(+196 files in other folders)
